Mon Dec 23 03:23:33 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc,docs/omegascript.txt,templates/query: Added $unstem to map
	  a stemmed term to the form(s) used in the query; $queryterms now
	  only includes the first occurence of each stemmed form; $prettyterm
	  uses the unstem map.

Sat Dec 21 17:47:33 GMT 2002  Olly Betts <olly@survex.com>

	* scriptindex.cc,docs/scriptindex.txt: Replaced index=nopos with
	  indexnopos action; index and indexnopos now take an optional
	  prefix argument; index=nopos is handled specially for backwards
	  compatibility.

Sat Dec 21 17:18:02 GMT 2002  Olly Betts <olly@survex.com>

	* scriptindex.cc,docs/scriptindex.txt: Added new scriptindex action
	  date=FORMAT to generate terms for date range searching.

Sat Dec 21 01:51:32 GMT 2002  Olly Betts <olly@survex.com>

	* templates/query: Stop topterms sticking out of green box with
	  gecko based browsers.

Sat Dec 21 01:44:53 GMT 2002  Olly Betts <olly@survex.com>

	* Makefile.am: Distribute docs/scriptindex.txt.
	* docs/omegascript.txt: It's $setrelevant not $set_relevant.

Sat Dec 14 13:54:10 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in: Version 0.6.3; removed -Wno-long-long as we don't use
	  long long here.
	* query.cc: Compilation fixes.
	* templates/query: Don't call $topterms twice!

Sat Dec 14 01:10:48 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc: Updated in line with removal of OmSettings.

Wed Dec 11 00:58:49 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in,query.cc,docs/omegascript.txt,templates/query:
	  Added $time which reports how long the match took - when searching
	  on a remote website, it's hard to gauge how much time is taken by
	  the search, and how much by the web server and browser; renamed
	  and_vec to or_vec which better describes its purpose.

Mon Dec 09 17:11:26 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc,docs/omegascript.txt,templates/query: Added $dbsize